# TelegramEnglishBot

./: Dockerfile  Google Cloud and Docker 部署心得.md  README.md  app.py  pyproject.toml  setwebhook.py  telegrambot.py  事.md
DB/: db_set.py  message.py
telegramenglishteacher/: AliTranslate.py  Talkfirst.py  deepseekword.py  zhipuPic.py  zhipuWord.py
tests/: __init__.py
