[tool.poetry]
name = "telegramenglishteacher"
version = "0.1.0"
description = ""
authors = ["Leonpei <peileon2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
requests = "^2.32.3"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
zhipuai = "^2.1.5.20250106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
